Update copy on careers page.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -55,32 +55,35 @@
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('Thunderbird is looking to hire a senior software engineer to join the team. You will help modernize the codebase and design new features for this already very popular cross platform email client. We’re committed to moving the code base over to using primarily web technologies, and you’ll be part of this effort. Contrary to many opportunities elsewhere, you have the opportunity to directly utilize the most cutting edge developments in the browser engine.') }}
+        {{ _('The Thunderbird team is looking to hire a hardworking senior software engineer. You will help update our code base and craft new features for this already very popular cross platform email client. We’re committed to moving our code base over to using primarily web technologies, and you’ll have a significant part to play in this effort. Contrary to many opportunities elsewhere, you have the opportunity to directly utilize the most groundbreaking developments in the browser engine.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('As an engineer at Thunderbird, you will be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world both on the code level and as a concrete result in improvements on the product.') }}
+        {{ _('As an engineer at Thunderbird, you will be working with our existing staff and community members from all over the globe. We are key contributors to open source, allowing you to show your skills to the world both on the code level and as a concrete result in improvements on the product.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. We expect excellent written communication skills so as to foster strong work coordination over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
     </aside>
     <aside>
       <h4 class="subheader-section">{{ _('You could end up working on:') }}</h4>
       <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
         <li>
-          {{ _('Rewriting the address book.') }}
+          {{ _('Updating the application on UX and technical levels.') }}
         </li>
         <li>
-          {{ _('Modernizing the compose pipeline.') }}
+          {{ _('Code and feature improvements in the integrated calendar.') }}
         </li>
         <li>
-          {{ _('Creating tests for operational performance, and address performance bottlenecks.') }}
+          {{ _('Mail protocol implementations or re-implementations in JavaScript.') }}
+        </li>
+        <li>
+          {{ _('Crafting tests for operational performance, and addressing performance bottlenecks.') }}
         </li>
         <li>
           {{ _('Integrating some of the best parts of the more popular add-ons into core.') }}
         </li>
         <li>
-          {{ _('...and <a href="http://lists.thunderbird.net/pipermail/maildev_lists.thunderbird.net/2019-November/002024.html">much more</a>.') }}
+          {{ _('...and <a href="https://mail.mozilla.org/pipermail/tb-planning/2020-October/008030.html">much more</a>.') }}
         </li>
       </ul>
     </aside>
@@ -88,27 +91,33 @@
       <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
       <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
         <li>
-          {{ _('Passion for open source, and open standards.') }}
+          {{ _('Dedication to open source and open standards.') }}
         </li>
         <li>
           {{ _('A mission of making a concrete positive impact on the day to day communication experience for tens of millions of users.') }}
         </li>
         <li>
-          {{ _('Solid understanding of web technologies.') }}
+          {{ _('Strong understanding of web technologies.') }}
         </li>
         <li>
-          {{ _('At least five years experience developing with JavaScript/HTML/CSS.') }}
+          {{ _('About five years of validated experience developing with JavaScript/HTML/CSS.') }}
         </li>
         <li>
           {{ _('Knowledge of C/C++.') }}
         </li>
         <li>
-          {{ _('Good problem solving skills.') }}
+          {{ _('Good problem-solving skills.') }}
         </li>
         <li>
           {{ _('Familiarity with add-ons and previous open source engagement is a plus.') }}
         </li>
+        <li>
+          {{ _('Experience with calendar systems would be desired, but not a must.') }}
+        </li>
       </ul>
+      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+        {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
+      </p>
       <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
     </aside>
   </section>
@@ -128,16 +137,16 @@
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-5 p-links-blue">
-        {{ _('The Thunderbird team is expanding and wants to hire a passionate engineer to work with us on ongoing maintenance work as well as feature development.') }}
+        {{ _('The Thunderbird team is growing, and we are looking to hire a dedicated and hardworking engineer to work with us on our ongoing maintenance work as well as feature development.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('We’re committed to moving the code base over to using primarily web technologies, and you’ll be part of this effort. Contrary to many opportunities elsewhere, you’ll have the opportunity to utilize the most cutting edge developments in the browser engine.') }}
+        {{ _('We’re committed to moving our code base over to using primarily web technologies, and you’ll be an important part of this effort. Contrary to many learning opportunities elsewhere, you’ll have the opportunity to utilize the most groundbreaking developments in the browser engine.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('As an engineer at Thunderbird, you’ll be working with existing staff and community members from all over the globe. We work very much in the open, and you’ll be able to show your skills to the world both on the code level and as a concrete results in improvements on the product.') }}
+        {{ _('As an engineer at Thunderbird, you will work with our existing staff and community members from all over the globe. We are key contributors to open source, allowing you to show your skills to the world both on the code level and as a concrete result in improvements on the product.') }}
       </p>
       <p class="font-lg tracking-wider leading-loose mb-10 p-links-blue">
-        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. You are expected to have excellent written communication skills and coordinate your work over email, video conferencing, Matrix, and Bugzilla.') }}
+        {{ _('This is a <strong>remote</strong>, <strong>full time</strong> position. We expect excellent written communication skills so as to foster strong work coordination over email, video conferencing, Matrix, and Bugzilla.') }}
       </p>
     </aside>
     <aside>
@@ -147,19 +156,16 @@
           {{ _('Localization, moving Thunderbird to using Fluent.') }}
         </li>
         <li>
-          {{ _('The ongoing effort of converting the user interface from using XUL to HTML.') }}
+          {{ _('The ongoing effort of converting our code base towards web technology compliance.') }}
         </li>
         <li>
-          {{ _('Converting filtering code implementation to JavaScript, and async operation.') }}
-        </li>
-        <li>
-          {{ _('Compose pipeline modernization.') }}
+          {{ _('Converting the filtering code implementation to JavaScript, and async operation.') }}
         </li>
         <li>
           {{ _('Integrating some of the best parts of the more popular add-ons into core.') }}
         </li>
         <li>
-          {{ _('...and <a href="http://lists.thunderbird.net/pipermail/maildev_lists.thunderbird.net/2019-November/002024.html">much more</a>.') }}
+          {{ _('...and <a href="https://mail.mozilla.org/pipermail/tb-planning/2020-October/008030.html">much more</a>.') }}
         </li>
       </ul>
     </aside>
@@ -167,21 +173,24 @@
       <h4 class="subheader-section">{{ _('We’re looking for someone with:') }}</h4>
       <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
         <li>
-          {{ _('Passion for open source, and open standards.') }}
+          {{ _('Dedication to open source and open standards.') }}
         </li>
         <li>
-          {{ _('Good understanding of web technologies.') }}
+          {{ _('Substantial understanding of web technologies.') }}
         </li>
         <li>
-          {{ _('Proven experience developing with JavaScript/HTML/CSS.') }}
+          {{ _('Demonstrated ability of developing with JavaScript/HTML/CSS.') }}
         </li>
         <li>
-          {{ _('Knowledge of C/C++.') }}
+          {{ _('Knowledge of C/C++ is a plus.') }}
         </li>
         <li>
-          {{ _('Good problem solving skills.') }}
+          {{ _('Effective and creative problem-solving skills.') }}
         </li>
       </ul>
+      <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
+        {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
+      </p>
       <a href="#apply" class="btn-join self-start">{{ _('How to Apply')}}</a>
     </aside>
   </section>
@@ -206,9 +215,6 @@
         </p>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
           {{ _('The successful applicant will be hired through the third-party service Upwork. Your work will be directed through the Thunderbird project’s technical manager. By applying for this job, you are agreeing to have your application reviewed by Thunderbird contractors and volunteers who are a part of the hiring committee as well as by staff members at the Mozilla Foundation and companies under its umbrella.') }}
-        </p>
-        <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('We are an equal opportunity employer and value diversity. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.') }}
         </p>
       </aside>
     </section>
