Add 1 additional open position to Software Engineer on careers page.

--- a/website/careers/index.html
+++ b/website/careers/index.html
@@ -132,7 +132,7 @@
         <aside class="flex flex-col">
           {{ _('Software Engineer')}}
           <small class="font-normal font-md tracking-normal normal-case">
-            {{ _('Full Time / Remote') }}
+            {{ _('Full Time / Remote / 2 Available Openings') }}
           </small>
         </aside>
       </h3>
