Link to docs instead of directly to Pontoon for localization. Fixes #228

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -230,13 +230,10 @@
         </h3>
         <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
           <li>
-            {{ _('Localization of Thunderbird occurs primarily <a href="https://pontoon.mozilla.org/projects/thunderbird/">on Pontoon</a>, Mozilla’s web-based localization tool.') }}
+           {{ _('For localization of Thunderbird itself, see <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
           </li>
           <li>
             {{ _('You can also contribute translations for this <a href="https://pontoon.mozilla.org/projects/thunderbirdnet/">website on Pontoon</a>.') }}
-          </li>
-          <li>
-           {{ _('In addition, see <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
           </li>
         </ul>
       </article>
