Update get involved page: Add matrix #tb-addon-developers, #openpgp. Add UX and E2EE mailing lists. Remove link to obsolete wiki communication page.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -313,6 +313,12 @@
             <li>
               {{ _('<a href="https://chat.mozilla.org/#/room/#maildev:mozilla.org">#maildev</a> - For hacking on Thunderbird.') }}
             </li>
+            <li>
+              {{ _('<a href="https://chat.mozilla.org/#/room/#tb-addon-developers:mozilla.org">#tb-addon-developers</a> - For questions and discussion about Thunderbird add-on development.') }}
+            </li>
+            <li>
+              {{ _('<a href="https://chat.mozilla.org/#/room/#openpgp:mozilla.org">#openpgp</a> - For OpenPGP discussion.') }}
+            </li>
         </article>
       </aside>
 
@@ -341,10 +347,13 @@
             <li>
               {{ _('<a href="https://thunderbird.topicbox.com/groups/addons">Add-on Developers List</a> - For general discussions about creating add-ons, and is for add-on developers who need support in creating their add-ons.') }}
             </li>
+            <li>
+              {{ _('<a href="https://thunderbird.topicbox.com/groups/ux">Thunderbird UX List</a> - Mailing list for discussion on UX in Thunderbird.') }}
+            </li>
+            <li>
+              {{ _('<a href="https://thunderbird.topicbox.com/groups/e2ee">Thunderbird E2EE List</a> - End-to-end Encryption using OpenPGP, OTR, and S/MIME.') }}
+            </li>
           </ul>
-          <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('Also check the <a href="https://wiki.mozilla.org/Thunderbird/CommunicationChannels">Communication Channels</a> wiki page.') }}
-          </p>
         </article>
       </aside>
     </section>
