Fix #236: Delete outdated Calendar  page links.

--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -26,7 +26,7 @@
         </aside>
       </h3>
       <p class="font-lg tracking-wider leading-loose mb-6">
-        {{ _('Organize your schedule and life’s important events in a calendar that’s fully integrated with your Thunderbird or Seamonkey email. Manage multiple calendars, create your daily to do list, invite friends to events, and subscribe to public calendars.') }}
+        {{ _('Organize your schedule and life’s important events in a calendar that’s fully integrated with your Thunderbird email. Manage multiple calendars, create your daily to do list, invite friends to events, and subscribe to public calendars.') }}
       </p>
       </aside>
     </aside>
@@ -39,22 +39,7 @@
   <section class="pt-20 pb-20 w-full bg-calendar">
     <section class="flex flex-wrap max-w-6xl mx-auto pl-8 pr-8">
 
-      <aside class="flex flex-col w-1/3">
-        <a href="https://developer.mozilla.org/en/Calendar/Calendar_Versions"
-          class="flex flex-col btn-block-white m-2">
-          <h4 class="header-section mb-0">
-            <span>{{ svg('information') }}</span>
-            <aside class="flex flex-col font-lg">
-              {{ _('Compatibility Information')}}
-              <small class="font-normal font-regular tracking-normal normal-case">
-                {{ _('Thunderbird, Seamonkey, what version?') }}
-              </small>
-            </aside>
-          </h4>
-        </a>
-      </aside>
-
-      <aside class="flex flex-col w-1/3">
+      <aside class="flex flex-col w-1/2">
         <a href="https://support.mozilla.org/products/thunderbird/calendar"
           class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
@@ -69,7 +54,7 @@
         </a>
       </aside>
 
-      <aside class="flex flex-col w-1/3">
+      <aside class="flex flex-col w-1/2">
         <a href="holidays/" class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
             <span>{{ svg('calendar') }}</span>
@@ -83,22 +68,7 @@
         </a>
       </aside>
 
-      <aside class="flex flex-col w-1/3">
-        <a href="https://developer.mozilla.org/en/Calendar/"
-          class="flex flex-col btn-block-white m-2">
-          <h4 class="header-section mb-0">
-            <span>{{ svg('developer') }}</span>
-            <aside class="flex flex-col font-lg">
-              {{ _('Developer Tools')}}
-              <small class="font-normal font-regular tracking-normal normal-case">
-                {{ _('Dive into development.') }}
-              </small>
-            </aside>
-          </h4>
-        </a>
-      </aside>
-
-      <aside class="flex flex-col w-1/3">
+      <aside class="flex flex-col w-1/2">
         <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Calendar"
           class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
@@ -113,7 +83,7 @@
         </a>
       </aside>
 
-      <aside class="flex flex-col w-1/3">
+      <aside class="flex flex-col w-1/2">
         <a href="https://codetribute.mozilla.org/projects/calendar"
           class="flex flex-col btn-block-white m-2">
           <h4 class="header-section mb-0">
