Update design section of Get Involved page.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -235,7 +235,7 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('Please share ideas and concepts by posting them on <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird&bug_severity=enhancement">Bugzilla</a>.<br/>You can also discuss design in the <a href="https://chat.mozilla.org/#/room/#thunderbird:mozilla.org">#maildev</a> Matrix channel, or the <a href="https://discourse.mozilla.org/c/thunderbird">Discourse category</a>.') }}
+          {{ _('Please share ideas and concepts by posting them on <a href="https://thunderbird.topicbox.com/groups/ux">the UX list on Topicbox</a>.<br/>You can also discuss design in the <a href="https://chat.mozilla.org/#/room/#tb-design:mozilla.org">#tb-design</a> Matrix channel.') }}
         </p>
       </aside>
 
