--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -117,7 +117,7 @@
         <article class="flex flex-col w-full mb-6 lg:pl-8">
           <h4 class="subheader-section">{{ _('Matrix Channels on chat.mozilla.org') }}</h4>
           <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-            {{ _('You can use the <a href="https://riot.im/download/desktop/">Riot desktop client</a> if you don’t want to use a browser. Set the home server to "mozilla.modular.im".') }}
+            {{ _('You can use the <a href="https://element.io/get-started">Element mobile or desktop clients</a> if you don’t want to use a browser. Set the home server to "mozilla.modular.im".') }}
           </p>
           <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
             <li>
