--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -63,7 +63,7 @@
     </aside>
   </section>
 
-<section class="pt-10 lg:pt-20 pb-10 bg-calendar pr-8 pl-8">
+  <section class="pt-10 lg:pt-20 pb-10 pr-8 pl-8">
     <section id="communication" class="flex flex-col lg:flex-row flex-wrap max-w-6xl mx-auto">
       <aside class="flex flex-col w-full mb-10">
         <h3 class="header-section">
@@ -248,7 +248,7 @@
     </section>
   </section>
 
-  <section id="documentation" class="pt-10 lg:pb-10 flex flex-col lg:flex-row flex-wrap max-w-6xl mx-auto pl-8 pr-8">
+  <section id="documentation" class="pt-10 flex flex-col lg:flex-row flex-wrap max-w-6xl mx-auto pl-8 pr-8">
     <aside class="flex flex-col w-full mb-10">
       <h3 class="header-section">
         <span>{{ svg('news') }}</span>
@@ -293,46 +293,47 @@
     </aside>
   </section>
 
-  <section class="pt-10 pb-10 flex flex-col lg:flex-row flex-wrap max-w-6xl mx-auto pr-8 pl-8">
-    <aside id="qualityassurance" class="flex flex-col w-full lg:w-1/2">
-      <article class="flex flex-col w-full mb-6 lg:pl-8">
-        <h3 class="header-section">
-          <span>{{ svg('popular') }}</span>
-          <aside class="flex flex-col">
-            {{ _('Quality Assurance')}}
-            <small class="font-normal font-md tracking-normal normal-case">
-              {{ _('Help catch those bugs before they get loose.') }}
-            </small>
-          </aside>
-        </h3>
-        <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
-          {{ _('See <a href="https://wiki.mozilla.org/Thunderbird:Testing">Thunderbird:Testing</a> on the Mozilla Wiki.') }}
-        </p>
-      </article>
-    </aside>
-    <aside id="translation" class="flex flex-col w-full lg:w-1/2">
-      <article class="flex flex-col w-full mb-6 pr-8">
-        <h3 class="header-section">
-          <span>{{ svg('dictionaries') }}</span>
-          <aside class="flex flex-col">
-            {{ _('Translation')}}
-            <small class="font-normal font-md tracking-normal normal-case">
-              {{ _('Make sure the entire world can use Thunderbird.') }}
-            </small>
-          </aside>
-        </h3>
-        <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
-          <li>
-           {{ _('For localization of Thunderbird itself, see <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
-          </li>
-          <li>
-            {{ _('You can also contribute translations for this <a href="https://pontoon.mozilla.org/projects/thunderbirdnet/">website on Pontoon</a>.') }}
-          </li>
-        </ul>
-      </article>
-    </aside>
+  <section class="pt-10 lg:pt-20 bg-calendar pr-8 pl-8">
+    <section class="pt-10 pb-10 flex flex-col lg:flex-row flex-wrap max-w-6xl mx-auto">
+      <aside id="qualityassurance" class="flex flex-col w-full lg:w-1/2">
+        <article class="flex flex-col w-full mb-6 lg:pl-8">
+          <h3 class="header-section">
+            <span>{{ svg('popular') }}</span>
+            <aside class="flex flex-col">
+              {{ _('Quality Assurance')}}
+              <small class="font-normal font-md tracking-normal normal-case">
+                {{ _('Help catch those bugs before they get loose.') }}
+              </small>
+            </aside>
+          </h3>
+          <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
+            {{ _('See <a href="https://wiki.mozilla.org/Thunderbird:Testing">Thunderbird:Testing</a> on the Mozilla Wiki.') }}
+          </p>
+        </article>
+      </aside>
+      <aside id="translation" class="flex flex-col w-full lg:w-1/2">
+        <article class="flex flex-col w-full mb-6 pr-8">
+          <h3 class="header-section">
+            <span>{{ svg('dictionaries') }}</span>
+            <aside class="flex flex-col">
+              {{ _('Translation')}}
+              <small class="font-normal font-md tracking-normal normal-case">
+                {{ _('Make sure the entire world can use Thunderbird.') }}
+              </small>
+            </aside>
+          </h3>
+          <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
+            <li>
+             {{ _('For localization of Thunderbird itself, see <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Thunderbird/Thunderbird_Localization">Thunderbird Localization</a> on MDN.') }}
+            </li>
+            <li>
+              {{ _('You can also contribute translations for this <a href="https://pontoon.mozilla.org/projects/thunderbirdnet/">website on Pontoon</a>.') }}
+            </li>
+          </ul>
+        </article>
+      </aside>
+    </section>
   </section>
-
   {% include '_includes/site-prefooter.html' %}
 
 {% endblock %}
