More Get Involved copy edits courtesy of @wsmwk.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -86,7 +86,7 @@
             <li>{{ _('<a href="https://thunderbird.topicbox.com/groups/announcements">Announcements List</a> - For public announcements.') }}
             </li>
             <li>
-              {{ _('<a href="https://thunderbird.topicbox.com/groups/addons">Add-on Developers List</a> - For general discussions about creating add-ons, and for developers to find support in creating their add-ons.') }}
+              {{ _('<a href="https://thunderbird.topicbox.com/groups/addons">Add-on Developers List</a> - For developers to get support in developing and creating add-ons.') }}
             </li>
             <li>
               {{ _('<a href="https://thunderbird.topicbox.com/groups/beta">Beta List</a> - For announcements and discussions about Thunderbird Beta.') }}
@@ -103,7 +103,7 @@
             <li>
               {{ _('<a href="https://thunderbird.topicbox.com/groups/enterprise">E2EE List</a> - End-to-end Encryption using OpenPGP, OTR, and S/MIME.') }}
             </li>
-            <li>{{ _('<a href="https://thunderbird.topicbox.com/groups/planning">Planning List</a> - For high-level discussion about Thunderbird.') }}
+            <li>{{ _('<a href="https://thunderbird.topicbox.com/groups/planning">Planning List</a> - Discuss plans, strategy, policy, governance; improvements, meta issues; promote open standards; status, announcements; organize work to move Thunderbird forward!') }}
             </li>
             <li>
               {{ _('<a href="https://wiki.mozilla.org/Thunderbird/tb-support-crew">Support Crew</a> - Private list for volunteers to discuss management of support.') }}
@@ -140,7 +140,7 @@
     </section>
   </section>
 
-  <section class="pt-10 pb-10 w-full bg-grey-lighter">
+  <section class="pt-10 pb-10 w-full">
     <section id="development" class="pt-10 pb-10 flex max-w-6xl mx-auto justify-center items-center pl-8 pr-8">
       <aside class="flex flex-col flex-grow">
         <h3 class="header-section">
@@ -153,7 +153,7 @@
           </aside>
         </h3>
         <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-          {{ _('If you would like to learn how to contribute code to Thunderbird, check out our <a href="https://developer.thunderbird.net/">developer documentation.</a> You will learn how to get the code, set any necessary configuration, build the calendar, rebuild after checking out new code, etc. It is a good read. Don’t just skim it.') }}
+          {{ _('Learn how to contribute code to Thunderbird with our <a href="https://developer.thunderbird.net/">developer documentation.</a> The documentation describes how to get the code, set any necessary configuration, build and rebuild, etc. It is a good read - don’t just skim it.') }}
         </p>
       </aside>
     </section>
