--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -137,6 +137,14 @@
             </li>
         </article>
       </aside>
+      <aside class="flex flex-col w-full lg:w-1/2">
+        <article class="flex flex-col w-full mb-6 lg:pl-8">
+          <h4 class="subheader-section">{{ _('Status Meeting') }}</h4>
+          <p class="font-md tracking-wide leading-loose mb-6 mt-0 p-links-blue">
+            {{ _('We meet on video chat every two weeks to report on project status and discuss day-to-day operations. You can <a href="https://wiki.mozilla.org/Thunderbird/StatusMeetings">find information on that meeting here.</a>') }}
+          </p>
+        </article>
+      </aside>
     </section>
   </section>
 
@@ -266,9 +274,6 @@
         <h4 class="subheader-section">{{ _('Where documentation lives') }}</h4>
         <ul class="font-md tracking-wider leading-loose mb-10 p-links-blue">
           <li>
-            {{ _('<a href="https://wiki.mozilla.org/Thunderbird:Home">The Thunderbird section</a> of the Mozilla wiki.') }}
-          </li>
-          <li>
             {{ _('The official <a href="https://developer.thunderbird.net/">Thunderbird developer website.</a>') }}
           </li>
         </ul>
@@ -279,9 +284,6 @@
       <article class="flex flex-col w-full mb-6 lg:pl-8">
         <h4 class="subheader-section">{{ _('Contributing to documentation') }}</h4>
         <ul class="font-md tracking-wider leading-loose mb-6 p-links-blue">
-          <li>
-            {{ _('<a href="https://wiki.mozilla.org/MozillaWiki:Policies/Accounts">MozillaWiki:Policies/Accounts</a> - What you need to know to contribute to the wiki. That page is applicable to the Thunderbird section.') }}
-          </li>
           <li>
             {{ _('You can contribute to the Thunderbird developer documentation via its repository <a href="https://github.com/thundernest/developer-docs"> on GitHub.</a>') }}
           </li>
